# TinyCompiler_Richerlv

./: CGEN.C  CMakeLists.txt  GLOBALS.H  LAB1.TNY  MAIN.C  README.md  SCAN.C  UTIL.C
